--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-* {
-    margin: 0 !important;
-    padding: 0 !important;
-    font-family: 'Roboto', sans-serif;
-    /* text-align: center; */
+body {
+    margin: 0;
+    padding: 0;
+    text-align: center
 }
 
 div.a {
+    font-family: 'Roboto', sans-serif;
     text-align: center;
 }
 
@@ -60,8 +60,4 @@ input.enviar:hover {
 .fechaNacimiento,
 .control {
     color: silver;
-}
-
-.cajaTest {
-    background-color: red !important;
 }
